Move new 1588 routines to a separate file.

--- a/src/EnergyPlus/CMakeLists.txt
+++ b/src/EnergyPlus/CMakeLists.txt
@@ -494,6 +494,8 @@ SET( SRC
   WindTurbine.hh
   WindowAC.cc
   WindowAC.hh
+  WindowASHRAE1588RP.cc
+  WindowASHRAE1588RP.hh
   WindowComplexManager.cc
   WindowComplexManager.hh
   WindowEquivalentLayer.cc
