Add more frame/spacer capability. Add more output. Add 1588 database.

--- a/idd/Energy+.idd.in
+++ b/idd/Energy+.idd.in
@@ -6823,6 +6823,7 @@ Construction:WindowASHRAE1588RP,
        \key Insulated
        \key AluminumUnbroken
        \key AluminumBroken
+       \key Structural
        \key Vinyl
        \autocalculatable
        \default autocalculate
